--- a/ZeiterfassungPierburg/Views/Fertigungsteil/Edit.cshtml
+++ b/ZeiterfassungPierburg/Views/Fertigungsteil/Edit.cshtml
@@ -52,6 +52,8 @@
                             <input type="submit" value="Speichern" class="btn btn-default" />
                         </div>
                     </div>
+                    <h3>@ViewBag.FertigungsteilMessage</h3>
+
                 }
 
                 <div>
