--- a/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
@@ -79,6 +79,7 @@
                         <li>@Html.ActionLink("Fertigungsteile", "Index", "Fertigungsteil")</li>
                         <li>@Html.ActionLink("Mitarbeiter", "Index", "Mitarbeiter")</li>
                         <li>@Html.ActionLink("Teile bei Anlagen", "Index", "TeileInProduktionsanlage")</li>
+                        <li>@Html.ActionLink("Produktivität", "Create", "Produktivität")</li>
                         <!--<li>@Html.ActionLink("Verwaltung", "Index", "Zugriffsrechte")</li>-->
                     </ul>
     <!-- /.sidebar-menu -->
