--- a/ZeiterfassungPierburg/Views/Produktivität/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Produktivität/Index.cshtml
@@ -7,7 +7,12 @@
             <div class="box-header with-border">
                 <h3>Übersicht der Produktivität</h3>
 
-                
+                <h5>
+                    Benutzte Filter: <span class="label label-warning"> @ViewBag.Message </span>
+                   
+                </h5>
+
+
 
                 <table id="example" class="table table-striped table-bordered" style="width:100%">
                     <thead>
