edit TeileInAnlage controller + view

--- a/ZeiterfassungPierburg/Views/Shared/Error.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/Error.cshtml
@@ -4,14 +4,33 @@
     ViewBag.Title = "Error";
 }
 
+
+<div class="container h-100">
+    <div class="row align-items-center h-100">
+        <div class="col-6 mx-auto">
+            <div class="jumbotron">
+                <div class="col-6 mx-auto">
+
+                    <h1><big><big><big><big><big><big><big>☹</big></big></big></big>   </big></big></big></h1>
+                </div>
+
+                <h3>
+                    Das ist nicht gelungen. Wahrscheinlich hast du keinen Zugriff oder sie Seite existiert nicht.
+                </h3>
+                <h4>
+                    Falls du glaubst, dass etwas nicht stimmt, kontaktiere bitte den Administrator.
+                </h4>
+            </div>
+            </div>
+    </div>
+</div>
+
 <section class="content container-fluid">
-    <div class="box-header with-border">
-        <h1>☹</h1>
-        <h2>
-            Das ist nicht gelungen. Wahrscheinlich hast du keinen Zugriff oder sie Seite existiert nicht.
-        </h2>
-        <h2>
-            Falls das häufiger passiert, kontaktiere bitte den Administrator.
-        </h2>
+    <div class="container d-flex h-100">
+        <div class="row justify-content-center align-self-center">
+            
+        </div>
+
+
     </div>
 </section>
