--- a/ZeiterfassungPierburg/Views/Produktivität/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Produktivität/Index.cshtml
@@ -9,8 +9,13 @@
 
                 <h5>
                     Benutzte Filter: <span class="label label-warning"> @ViewBag.Message </span>
-                   
+
                 </h5>
+                @if (Model.Any())
+                {
+                @ViewBag.MitarbeiterBeschreibung   <big><big><big>@Html.DisplayFor(modelItem => Model.First().Mitarbeiter)</big></big></big>
+                }
+
 
                 <table id="example" class="table table-striped table-bordered" style="width:100%">
                     <thead>
@@ -24,6 +29,7 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.Produktivität)
                             </th>
+
                         </tr>
                     </thead>
                     <tbody>
@@ -39,6 +45,7 @@
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Produktivität)
                                 </td>
+
                             </tr>
                         }
                     </tbody>
