--- a/ZeiterfassungPierburg/Views/Home/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Home/Index.cshtml
@@ -128,22 +128,22 @@
                     <div class="col-sm-12">
                         <!-- Progress bars -->
                         <div class="clearfix">
-                            <div id="productivity"></div>
+                            <!--  <div id="productivity"></div> -->
                         </div>
-                    </div>
-                </div>
             </div>
-            <div class="box-footer text-black">
+        </div>
+    </div>
+    <div class="box-footer text-black">
 
-                <h4 style="padding-bottom: 20px;">Produktivität gesamt - Maschinen</h4>
+        <h4 style="padding-bottom: 20px;">Produktivität gesamt - Maschinen</h4>
 
-                <div class="row">
-                    <div class="col-sm-12">
-                        <!-- Progress bars -->
-                        <div class="clearfix">
-                            <div id="productivityMaschinen"></div>
+        <div class="row">
+            <div class="col-sm-12">
+                <!-- Progress bars -->
+                            <div class="clearfix">
+                                <div id="productivityMaschinen"></div>
+                            </div>
                         </div>
-                    </div>
                 </div>
                 </div>
             </div>
