--- a/ZeiterfassungPierburg/Views/Fertigungsteil/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/Fertigungsteil/Create.cshtml
@@ -37,6 +37,14 @@
                     </div>
 
                     <div class="form-group">
+                        @Html.LabelFor(model => model.AnzahlMA, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-8">
+                            @Html.EditorFor(model => model.AnzahlMA, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.AnzahlMA, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
                         <div class="col-md-offset-2 col-md-8">
                             <input type="submit" value="Hinzufügen" class="btn btn-default" />
                         </div>
