--- a/ZeiterfassungPierburg/Views/Fertigungsteil/Edit.cshtml
+++ b/ZeiterfassungPierburg/Views/Fertigungsteil/Edit.cshtml
@@ -39,6 +39,14 @@
                     </div>
 
                     <div class="form-group">
+                        @Html.LabelFor(model => model.AnzahlMA, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.AnzahlMA, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.AnzahlMA, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
                         @Html.LabelFor(model => model.IstAktiv, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-8">
                             @Html.CheckBoxFor(model => model.IstAktiv, new { htmlAttributes = new { @class = "form-control" } })
