--- a/ZeiterfassungPierburg/Views/Fertigungsteil/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Fertigungsteil/Index.cshtml
@@ -18,6 +18,9 @@
                                 @Html.DisplayNameFor(model => model.teZEIT)
                             </th>
                             <th>
+                                @Html.DisplayNameFor(model => model.AnzahlMA)
+                            </th>
+                            <th>
                                 @Html.DisplayNameFor(model => model.IstAktiv)
                             </th>
                             <th>
@@ -37,6 +40,9 @@
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.teZEIT)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.AnzahlMA)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.IstAktiv)
