--- a/ZeiterfassungPierburg/Views/Home/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Home/Index.cshtml
@@ -2,11 +2,23 @@
 <link href="~/Content/Chart.css" rel="stylesheet" />
 
 
+
+
 <!-- Content Header (Page header) -->
 <section class="content-header">
-    <h1>
-        Herzlich willkommen, @ViewBag.Name!
-    </h1>
+
+
+
+
+    <fieldset>
+
+        @if (Session["UserName"] != null)
+        {<text>
+        <h1>  Herzlich willkommen @Session["UserName"].ToString() !</h1></text>
+    }
+    </fieldset>
+
+
     <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
         <li class="active">Dashboard</li>
@@ -130,33 +142,33 @@
                         <div class="clearfix">
                             <!--  <div id="productivity"></div> -->
                         </div>
-            </div>
-        </div>
-    </div>
-    <div class="box-footer text-black">
-
-        <h4 style="padding-bottom: 20px;">Produktivität gesamt - Maschinen</h4>
-
-        <div class="row">
-            <div class="col-sm-12">
-                <!-- Progress bars -->
-                            <div class="clearfix">
-                                <div id="productivityMaschinen"></div>
-                            </div>
-                        </div>
-                </div>
-                </div>
-            </div>
-
-            <div class="col-lg-6 col-xs-2">
-                <div class="box-footer text-black">
-                    <h4>Produktivität der letzten 12 Monate</h4>
-
-                    <div class="row">
-                        <canvas id="bar-chart" width="800" height="450"></canvas>
                     </div>
                 </div>
             </div>
+            <div class="box-footer text-black">
+
+                <h4 style="padding-bottom: 20px;">Produktivität gesamt - Maschinen</h4>
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <!-- Progress bars -->
+                        <div class="clearfix">
+                            <div id="productivityMaschinen"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-6 col-xs-2">
+            <div class="box-footer text-black">
+                <h4>Produktivität der letzten 12 Monate</h4>
+
+                <div class="row">
+                    <canvas id="bar-chart" width="800" height="450"></canvas>
+                </div>
+            </div>
+        </div>
 </section>
 
 @section scripts{
